[gd_scene load_steps=33 format=3 uid="uid://boqlw7v44r8bk"]

[ext_resource type="Script" path="res://levels/door.gd" id="1_5luso"]
[ext_resource type="Texture2D" uid="uid://f5avxmeo7cyb" path="res://assets/Basic Assets/Animated objects/Door/door open 41x48.png" id="1_pwev0"]
[ext_resource type="AudioStream" uid="uid://qqhdu6m3pt3e" path="res://assets/sounds/door.mp3" id="2_uayeo"]
[ext_resource type="Texture2D" uid="uid://d1fu5hi8bp5ln" path="res://assets/Basic Assets/Animated objects/Save/idle 16x19.png" id="3_fnkqp"]
[ext_resource type="LabelSettings" uid="uid://b33p2yrnnwkeq" path="res://cutscenes/intuduction.tres" id="3_wex7a"]
[ext_resource type="FontFile" uid="uid://rn2vgoht588t" path="res://assets/lunchtime-doubly-so.regular.ttf" id="4_j2bkj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0waes"]
atlas = ExtResource("1_pwev0")
region = Rect2(0, 0, 41, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1yy3q"]
atlas = ExtResource("1_pwev0")
region = Rect2(41, 0, 41, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vd81f"]
atlas = ExtResource("1_pwev0")
region = Rect2(82, 0, 41, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ikles"]
atlas = ExtResource("1_pwev0")
region = Rect2(123, 0, 41, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_31jyn"]
atlas = ExtResource("1_pwev0")
region = Rect2(164, 0, 41, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_omriv"]
atlas = ExtResource("1_pwev0")
region = Rect2(205, 0, 41, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_b8l22"]
atlas = ExtResource("1_pwev0")
region = Rect2(246, 0, 41, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wrelq"]
atlas = ExtResource("1_pwev0")
region = Rect2(287, 0, 41, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_phlo2"]
atlas = ExtResource("1_pwev0")
region = Rect2(328, 0, 41, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ofv3n"]
atlas = ExtResource("1_pwev0")
region = Rect2(369, 0, 41, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ra0t5"]
atlas = ExtResource("1_pwev0")
region = Rect2(410, 0, 41, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_x8u7t"]
atlas = ExtResource("1_pwev0")
region = Rect2(451, 0, 41, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qcjrx"]
atlas = ExtResource("1_pwev0")
region = Rect2(492, 0, 41, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hts7x"]
atlas = ExtResource("1_pwev0")
region = Rect2(533, 0, 41, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_7y3ym"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0waes")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1yy3q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vd81f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ikles")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_31jyn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_omriv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b8l22")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wrelq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_phlo2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ofv3n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ra0t5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x8u7t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qcjrx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hts7x")
}],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_8k5j4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("StaticBody2D/CollisionShape2D2:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StaticBody2D/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_r6xad"]
length = 1.00001
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.00624993, 0.10625, 0.20625, 0.30625, 0.40625, 0.50625, 0.60625, 0.70625, 0.80625, 0.90625),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7, 8, 9, 10, 11, 12, 13]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["default"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("StaticBody2D/CollisionShape2D2:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("StaticBody2D/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AudioStreamPlayer2D")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.566667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_aadve"]
_data = {
"RESET": SubResource("Animation_8k5j4"),
"default": SubResource("Animation_r6xad")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f5sfo"]
size = Vector2(5, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vkigp"]
size = Vector2(5, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k7d7j"]
size = Vector2(73, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_4qmwu"]
atlas = ExtResource("3_fnkqp")
region = Rect2(0, 0, 16, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_v8i8o"]
atlas = ExtResource("3_fnkqp")
region = Rect2(16, 0, 16, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_c04vu"]
atlas = ExtResource("3_fnkqp")
region = Rect2(32, 0, 16, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_o2rd0"]
atlas = ExtResource("3_fnkqp")
region = Rect2(48, 0, 16, 19)

[sub_resource type="SpriteFrames" id="SpriteFrames_ojt15"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4qmwu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v8i8o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c04vu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o2rd0")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[node name="Door" type="Node2D"]
script = ExtResource("1_5luso")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_7y3ym")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_aadve")
}

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-0.5, -12)
shape = SubResource("RectangleShape2D_f5sfo")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-0.5, 12)
shape = SubResource("RectangleShape2D_vkigp")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_uayeo")
volume_db = -10.0

[node name="ControlPanel" type="Node2D" parent="."]
position = Vector2(82, 15)

[node name="Area2D" type="Area2D" parent="ControlPanel"]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="ControlPanel/Area2D"]
position = Vector2(-0.5, -3)
shape = SubResource("RectangleShape2D_k7d7j")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="ControlPanel"]
sprite_frames = SubResource("SpriteFrames_ojt15")
frame_progress = 0.897834

[node name="Control" type="Control" parent="ControlPanel"]
layout_mode = 3
anchors_preset = 0
offset_left = -20.0
offset_top = -50.0
offset_right = 20.0
offset_bottom = -10.0

[node name="Label" type="Label" parent="ControlPanel/Control"]
layout_mode = 0
offset_left = -13.0
offset_top = 4.0
offset_right = 68.0
offset_bottom = 27.0
scale = Vector2(0.804952, 0.931256)
text = "Open door"
label_settings = ExtResource("3_wex7a")

[node name="Yes" type="Button" parent="ControlPanel/Control"]
layout_mode = 0
offset_left = -6.0
offset_top = 20.0
offset_right = 123.0
offset_bottom = 46.0
scale = Vector2(0.4, 0.4)
theme_override_fonts/font = ExtResource("4_j2bkj")
theme_override_font_sizes/font_size = 16
text = "Yes - [SPACE]"

[connection signal="body_entered" from="ControlPanel/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="ControlPanel/Area2D" to="." method="_on_area_2d_body_exited"]
